--- a/udagram-api/.env-example
+++ b/udagram-api/.env-example
@@ -1,13 +1,13 @@
 POSTGRES_HOST="database-1.cw39vix4gunc.us-east-1.rds.amazonaws.com"
 DB_PORT=5432
-POSTGRES_PASSWORD="postgres"
-POSTGRES_USERNAME="postgres"
+POSTGRES_PASSWORD="***"
+POSTGRES_USERNAME="***"
 RDS_DIALECT="postgres"
 POSTGRES_DB="postgres"
 AWS_REGION=""
 AWS_PROFILE=""
 AWS_BUCKET=""
 URL=""
-AWS_ACCESS_KEY_ID=""
-AWS_SECRET_ACCESS_KEY=""
+AWS_ACCESS_KEY_ID="****"
+AWS_SECRET_ACCESS_KEY="****"
 JWT_SECRET="thanks-udacity"
